Style: wishlist button and price savings *Wishlist: -Add width 44px -Add :global(.vtex-button__label) but not working *Price savins: -Add margin-bottom: 6px to flexRowContent--global__row__summary to add a gap between the row and product-summary-image -Add .savings--savings__summary padding-top: 8px, width: 84px and height: 30px, but does not work. *Add into home slider product summary "preventHorizontalStretch": true and "product-price-savings" prop - "alwaysShow": true

--- a/styles/css/home/vtex.flex-layout.css
+++ b/styles/css/home/vtex.flex-layout.css
@@ -8,6 +8,7 @@
     border-radius: 12px;
 }
 .flexRowContent--global__row__summary {
+    margin-bottom: 6px;
     display: flex;
     justify-content: space-around;
 }
