--- a/styles/css/home/vtex.product-price.css
+++ b/styles/css/home/vtex.product-price.css
@@ -1,7 +1,7 @@
 .savings--savings__summary {
-    padding-top: 10px;
+    padding-top: 8px;
     width: 84px;
-    height: 32px;
+    height: 30px;
     border: 1px solid #1D2734;
     border-radius: 3.04px;
     color: #ffffff;
