--- a/styles/css/home/vtex.wish-list.css
+++ b/styles/css/home/vtex.wish-list.css
@@ -5,6 +5,8 @@
 }
 .wishlistIconContainer--wish-list-icon :global(.vtex-button) {
     border: 1px solid #1D2734;
-    height: 32px;
-
+    width: 44px;
+}
+:global(.vtex-button__label) {
+    padding-bottom: 8px;
 }
